Fixed margin for project cards on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -151,6 +151,10 @@ h3 {
     #navbar {
         display: none;
     }
+    #learnmore {
+        position: relative;
+        top: -8rem;
+    }
     h2 {
         font-size: 75px;
         text-align: center;
@@ -168,6 +172,7 @@ h3 {
     }
     .card {
         padding-bottom: 10px;
+        margin: 5%;
         width: 15rem;
     }
     #Projects {
@@ -181,3 +186,4 @@ h3 {
         margin: 5px;
     }
 }
+
